# juno-calendar

./: .gitignore  README.md  build-templates.sh  eslint.config.js  juno.config.ts  juno.dev.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yaml  e2e-tests.yml
e2e/: authentication.spec.ts
proxy/: .firebaserc  README.md  firebase.env.sh  firebase.json
proxy/functions/: .eslintrc.js  .prettierrc  package-lock.json  package.json
proxy/functions/src/: app.ts  db.ts  email.ts  functions.ts  index.ts  proxy.ts  utils.ts
src/: app.css  app.d.ts  app.html
src/declarations/satellite/: satellite.api.ts  satellite.did.d.ts  satellite.factory.did.js
src/lib/components/: Alert.svelte  AnswersCount.svelte  Article.svelte  Auth.svelte  Backdrop.svelte  Card.svelte  Dashboard.svelte  EventCell.svelte  EventForm.svelte  EventSuccess.svelte  Footer.svelte  Hero.svelte  Login.svelte  Logout.svelte  Modal.svelte  Navbar.svelte  Table.svelte  Title.svelte
src/lib/types/: answers.ts  (+2 more)
src/routes/: +layout.svelte
src/satellite/: Cargo.toml  satellite_extension.did
src/satellite/resources/: email-notification-answer.html
src/satellite/src/: answers.rs  assert.rs  delete.rs  guards.rs  images.rs  impls.rs  lib.rs  prerender.rs  svg_text_path.rs  templates.rs  types.rs
src/satellite/src/http/: notify.rs  request.rs  response.rs
templates/: package-lock.json  package.json
templates/emails/: email-notification-answer.tsx
web2/: README.md
web2/functions/: package-lock.json
(+16 files in other folders)
