[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.15.1"
ic-cdk-macros = "0.15.0"
serde = "1.0.190"
serde_cbor = "0.11.2"
resvg = { version = "0.43.0", default-features = false, features = ["text"] }
tiny-skia = "0.11.4"
png = "0.17.5"
junobuild-satellite = "= 0.0.20-patch.1"
junobuild-macros = "0.0.2"
junobuild-utils = "0.0.3"
junobuild-shared = "0.0.18"
junobuild-storage = "= 0.0.7-patch.1"
junobuild-collections = "0.0.4"

